# pyro-storage

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Procfile  README.md  changelog.html  client.html  docker-compose-dev.yml  docker-compose.yml  genindex.html  index.html  installing.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog.doctree  client.doctree  environment.pickle  index.doctree  installing.doctree
.github/: labeler.yml  validate_headers.py
.github/workflows/: builds.yml  client.yml  main.yml  release.yml  style.yml  tests.yml
_modules/: index.html
_modules/pyrostorage/: client.html
_static/: documentation_options.js
client/: README.md  pyproject.toml  setup.py
client/.conda/: meta.yaml
client/docs/: README.md
client/docs/source/: changelog.rst  client.rst  conf.py  index.rst  installing.rst
client/docs/source/_static/js/: custom.js
client/pyrostorage/: client.py  exceptions.py
client/tests/: test_client.py
nginx/: nginx.conf
src/: Dockerfile-dev  requirements-dev.txt
src/app/: config.py  main.py  requirements.txt
src/app/api/: deps.py  external.py  schemas.py  security.py
src/app/api/crud/: __init__.py  accesses.py  authorizations.py  base.py
src/app/api/routes/: accesses.py  annotations.py  login.py  media.py
src/app/db/: __init__.py  init_db.py  models.py  session.py  tables.py
src/app/services/: services.py  utils.py
src/app/services/bucket/: qarnot.py  s3.py
src/tests/: conftest.py  db_utils.py  test_deps.py  test_external.py  test_security.py  test_services.py  utils.py
src/tests/crud/: test_authorizations.py
src/tests/routes/: test_accesses.py  test_annotations.py  test_login.py  test_media.py
