[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyro-storage"
version = "0.1.1.dev0"
description = "Backend for visual data curation about wildfires"
authors = ["Pyronear <contact@pyronear.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = ">=0.11.1,<1.0.0"
fastapi = ">=0.61.1,<1.0.0"
bcrypt = "^3.2.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
databases = { version = ">=0.2.6,<=0.4.0", extras = ["postgresql"] }
python-jose = "^3.2.0"
SQLAlchemy = "^1.3.12"
python-multipart = "==0.0.5"
aiofiles = "==0.6.0"
requests = "^2.22.0"
sentry-sdk = "^1.5.12"
qarnot = "^2.2.1"

flake8 = { version = ">=3.9.0,<5.0.0", optional = true }
isort = { version = "^5.7.0", optional = true }
mypy = { version = "^0.812", optional = true }
black = { version = "^22.1", optional = true }
pydocstyle = { version = "^6.0.0", extras = ["toml"], optional = true }
autoflake = { version = "^1.5.0", optional = true }
bandit = { version = "^1.7.0", extras = ["toml"], optional = true }
pre-commit = { version = "^2.17.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=5.3.2,<8.0.0"
pytest-asyncio = ">=0.17.0,<1.0.0"
coverage = ">=4.5.4,<7.0.0"
aiosqlite = ">=0.16.0,<1.0.0"
httpx = ">=0.23.0"
asyncpg = ">=0.20.0,<1.0.0"

[tool.poetry.extras]
quality = ["flake8", "isort", "mypy", "pydocstyle", "black", "autoflake", "bandit", "pre-commit"]

[tool.mypy]
mypy_path = "src/"
files = "src/app"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "qarnot.*",
    "jose.*",
    "passlib.*",
    "app.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.isort]
line_length = 120
src_paths = ["src/"]
skip_glob = ["client/*", "**/__init__.py"]
known_third_party = ["fastapi"]

[tool.pydocstyle]
select = "D300,D301,D417"
match = ".*\\.py"

[tool.coverage.run]
source = ["src/app"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.bandit]
exclude_dirs = []
skips = ["B101"]
